--- a/BorgataJavaFx/src/main/java/poker/app/view/PokerTable.fxml
+++ b/BorgataJavaFx/src/main/java/poker/app/view/PokerTable.fxml
@@ -1,65 +1,369 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="APMainScreen" prefHeight="600.0" prefWidth="889.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.PokerTableController">
+<AnchorPane fx:id="APMainScreen" prefHeight="600.0" prefWidth="889.0" stylesheets="@../git/Lab4/BorgataJavaFx/src/main/java/poker/app/view/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.PokerTableController">
+
    <children>
+
       <BorderPane layoutX="-1.0" layoutY="-1.0" prefHeight="600.0" prefWidth="889.0">
+
          <bottom>
+
             <AnchorPane prefHeight="107.0" prefWidth="674.0" BorderPane.alignment="CENTER">
+
                <children>
+
                   <HBox layoutX="278.0" layoutY="4.0" prefHeight="100.0" prefWidth="318.0">
+
                      <children>
-                        <GridPane prefHeight="100.0" prefWidth="315.0">
+
+                        <GridPane prefHeight="100.0" prefWidth="400.0">
+
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="94.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="221.0" />
+
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="95.0" />
+
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="220.0" />
+
                           </columnConstraints>
+
                           <rowConstraints>
+
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
                           </rowConstraints>
+
                            <children>
+
                               <TextField fx:id="txtP1Name" />
-                              <HBox fx:id="h1P1" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" />
+
+                              <HBox fx:id="h1P1" prefHeight="150.0" prefWidth="181.0" GridPane.columnIndex="1">
+
+                                 <children>
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" />
+
+                                    <ImageView fitHeight="53.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" />
+
+                                    <ImageView fitHeight="53.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+
+                                    <ImageView fitHeight="52.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" />
+
+                                    <ImageView fitHeight="54.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true" />
+
+                                    <ImageView fitHeight="54.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true" />
+
+                                    <ImageView fitHeight="61.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" />
+
+                                 </children></HBox>
+
                               <ToggleButton fx:id="btnP1SitLeave" mnemonicParsing="false" onAction="#handleP1SitLeave" styleClass="togglebutton" text="Sit" GridPane.rowIndex="1" />
+
                               <Label fx:id="lblP1Name" prefHeight="21.0" prefWidth="92.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
                            </children>
+
                         </GridPane>
+
                      </children>
+
                   </HBox>
+
                </children>
+
             </AnchorPane>
+
          </bottom>
-         <center>
+
+         <top>
+
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+
                <children>
+
                   <HBox layoutX="276.0" layoutY="236.0" prefHeight="173.0" prefWidth="339.0">
+
                      <children>
+
                         <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="173.0" prefWidth="338.0">
+
                           <items>
+
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+
                                  <children>
+
                                     <HBox layoutX="14.0" layoutY="10.0" prefHeight="68.0" prefWidth="317.0" />
-                                 </children></AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                                 <children>
-                                    <Button fx:id="btnPlay" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
-                                    <Button fx:id="btnDraw" layoutX="89.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDraw" text="Draw" />
-                                    <HBox fx:id="HboxCommonArea" layoutX="171.0" layoutY="14.0" prefHeight="55.0" prefWidth="160.0" />
+
                                  </children>
+
                               </AnchorPane>
+
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+
+                                 <children>
+
+                                    <Button fx:id="btnPlay" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
+
+                                    <Button fx:id="btnDraw" layoutX="89.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDraw" text="Draw" />
+
+                                    <HBox fx:id="HboxCommonArea" layoutX="171.0" layoutY="14.0" prefHeight="55.0" prefWidth="160.0">
+
+                                       <children>
+
+                                          
+
+                                          <ImageView fitHeight="74.0" fitWidth="53.0" pickOnBounds="true" preserveRatio="true" />
+
+                                       </children>
+
+                                    </HBox>
+
+                                 </children>
+
+                              </AnchorPane>
+
                           </items>
+
                         </SplitPane>
+
                      </children>
+
                   </HBox>
+      
+                  <AnchorPane fx:id="h2P2" layoutY="98.0" prefHeight="395.0" prefWidth="140.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="744.0" AnchorPane.topAnchor="98.0">
+      
+                     <children>
+      
+                        <HBox layoutX="-60.0" layoutY="173.0" prefHeight="100.0" prefWidth="318.0" rotate="-90.0">
+      
+                           <children>
+      
+                              <GridPane prefHeight="100.0" prefWidth="400.0" rotate="180.0">
+      
+                                <columnConstraints>
+      
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="95.0" />
+      
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="220.0" />
+      
+                                </columnConstraints>
+      
+                                <rowConstraints>
+      
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      
+                                </rowConstraints>
+      
+                                 <children>
+      
+                                    <TextField fx:id="txtP2Name" />
+      
+                                    <ToggleButton fx:id="btnP2SitLeave" mnemonicParsing="false" onAction="#handleP2SitLeave" styleClass="togglebutton" text="Sit" GridPane.rowIndex="1" />
+      
+                                    <Label fx:id="lblP2Name" prefHeight="21.0" prefWidth="92.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+      
+                                 </children>
+      
+                              </GridPane>
+      
+                           </children>
+      
+                        </HBox>
+      
+                     </children>
+      
+                  </AnchorPane>
+
+                  <AnchorPane fx:id="h4P4" layoutX="722.0" layoutY="-39.0" prefHeight="529.0" prefWidth="161.0" rotate="180.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="722.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+
+                     <children>
+
+                        <HBox layoutX="1.0" layoutY="85.0" prefHeight="100.0" prefWidth="318.0" rotate="90.0">
+
+                           <children>
+
+                              <GridPane prefHeight="100.0" prefWidth="318.0">
+
+                                 <columnConstraints>
+
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="95.0" />
+
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="220.0" />
+
+                                 </columnConstraints>
+
+                                 <rowConstraints>
+
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
+                                 </rowConstraints>
+
+                                 <children>
+
+                                    <TextField fx:id="txtP4Name" />
+
+                                    <ToggleButton fx:id="btnP4SitLeave" mnemonicParsing="false" onAction="#handleP4SitLeave" styleClass="togglebutton" text="Sit" GridPane.rowIndex="1" />
+
+                                    <Label fx:id="lblP4Name" prefHeight="21.0" prefWidth="92.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <ImageView fitHeight="25.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+
+                                 </children>
+
+                              </GridPane>
+
+                           </children>
+
+                        </HBox>
+
+                     </children>
+
+                  </AnchorPane>
+
+                  <AnchorPane fx:id="h3P3" layoutX="326.0" layoutY="-134.0" prefHeight="437.0" prefWidth="152.0" rotate="270.0">
+
+                     <children>
+
+                        <HBox layoutX="1.0" layoutY="85.0" prefHeight="100.0" prefWidth="318.0" rotate="90.0">
+
+                           <children>
+
+                              <GridPane rotate="180.0">
+
+                                 <columnConstraints>
+
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="95.0" />
+
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="220.0" />
+
+                                 </columnConstraints>
+
+                                 <rowConstraints>
+
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
+                                 </rowConstraints>
+
+                                 <children>
+
+                                    <TextField fx:id="txtP3Name" />
+
+                                    <ToggleButton fx:id="btnP3SitLeave" mnemonicParsing="false" onAction="#handleP3SitLeave" styleClass="togglebutton" text="Sit" GridPane.rowIndex="1" />
+
+                                    <Label fx:id="lblP3Name" prefHeight="21.0" prefWidth="92.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+                                    <ImageView fitHeight="55.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+
+                                 </children>
+
+                              </GridPane>
+
+                           </children>
+
+                        </HBox>
+
+                     </children>
+
+                  </AnchorPane>
+
+                  <MenuBar layoutX="-4.0" layoutY="-3.0" prefHeight="35.0" prefWidth="901.0">
+
+                    <menus>
+
+                        <Menu mnemonicParsing="false" text="Game">
+
+                          <items>
+
+                            <MenuItem mnemonicParsing="false" text="5 Card Joker Poker" />
+
+                              <MenuItem mnemonicParsing="false" text="5 Card Wild Joker" />
+
+                              <MenuItem mnemonicParsing="false" text="5 Card draw" />
+
+                              <MenuItem mnemonicParsing="false" text="7 Card draw" />
+
+                              <MenuItem mnemonicParsing="false" text="Texas Hold Em" />
+
+                              <MenuItem mnemonicParsing="false" text="Omaha" />
+
+                          </items>
+
+                        </Menu>
+
+                      <Menu mnemonicParsing="false" text="File">
+
+                        <items>
+
+                          <MenuItem mnemonicParsing="false" text="Close" />
+
+                        </items>
+
+                      </Menu>
+
+                      <Menu mnemonicParsing="false" text="Edit">
+
+                        <items>
+
+                          <MenuItem mnemonicParsing="false" text="Delete" />
+
+                        </items>
+
+                      </Menu>
+
+                      <Menu mnemonicParsing="false" text="Help">
+
+                        <items>
+
+                          <MenuItem mnemonicParsing="false" text="About" />
+
+                        </items>
+
+                      </Menu>
+
+                    </menus>
+
+                  </MenuBar>
+
                </children>
+
             </AnchorPane>
-         </center>
+
+         </top>
+
       </BorderPane>
+
    </children>
+
 </AnchorPane>
